--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -119,7 +119,7 @@ if ( domWidth<1200 ) {
                     <li></li>
                 </ol>
                 <!--注册框Begin-->
-                <form id="registerForm" action="" method="post">
+                <form id="registerForm" action="{:U('registerDoit')}" method="post">
                     <!--  隐藏域 -->
                     <input type="hidden" name="isReliveCardMember" value="-1">
                     <input id="doublemail" type="hidden" value="">
@@ -149,7 +149,7 @@ if ( domWidth<1200 ) {
                                 </div>
                             </div>
                             
-                            <div class="reg-items"> <a class="btnR1 jaBtnReg" href="javascript:;">免费注册</a> </div>
+                            <div class="reg-items"> <a class="btnR1 jaBtnReg" href="javascript;">免费注册</a> </div>
                         </div>
                     </section>
                 </form>
