--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -139,7 +139,7 @@ if ( domWidth<1200 ) {
                         <div class="reg-container">
                             <h3>60秒完成注册，幸福一辈子！</h3>
                             <div class="reg-items reg-sex clearfix" id="ZuiSex" style="margin-top:2em;"> <span class="items-name">账号：</span> <span class="iRadio male cur">
-                                <input id="jcLoginName" class="login-in" type="text" value="QQ/手机" name="loginInfo" style=" line-height: 2em; padding: 2px 10px; font-size: 16px;">
+                                <input id="jcLoginName" class="login-in" type="text" placeholder="QQ/手机" name="loginInfo" style=" line-height: 2em; padding: 2px 10px; font-size: 16px;">
                                 </span>
                                 <input value="0" type="hidden" name="baseInfo.sex" id="regSex">
                             </div>
