修改index.html页面 及添加所需图片

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -102,13 +102,13 @@ if ( domWidth<1200 ) {
     <section class="banner">
         <div id="jcBrandBanner" class="banner-container">
             <ul class="slide-content">
-                <li class="ban cur"> <img src="__IMG__/picture/1be94dcfa44fe471.jpg" width="100%" height="100%" />
+                <li class="ban cur"> <img src="__IMG__/picture/service4_d928444.jpg" width="100%" height="100%" />
                     <div id="jcBanner" class="frameW"></div>
                 </li>
-                <li class="ban cur"> <img src="__IMG__/picture/109b7306a46037d6.jpg" width="100%" height="100%" />
+                <li class="ban cur"> <img src="__IMG__/picture/service2_3de8555.jpg" width="100%" height="100%" />
                     <div id="jcBanner" class="frameW"></div>
                 </li>
-                <li class="ban cur"> <img src="__IMG__/picture/942b373f6ead1378.jpg" width="100%" height="100%" />
+                <li class="ban cur"> <img src="__IMG__/picture/service2_3de8666.jpg" width="100%" height="100%" />
                     <div id="jcBanner" class="frameW"></div>
                 </li>
             </ul>
@@ -137,7 +137,7 @@ if ( domWidth<1200 ) {
                     <section id="jcRegBox" class="reg-box">
                         <div class="mask"></div>
                         <div class="reg-container">
-                            <h3>60秒完成注册，幸福一辈子！</h3>
+                            <h3>赶快完成注册，幸福一辈子！</h3>
                             <div class="reg-items reg-sex clearfix" id="ZuiSex" style="margin-top:2em;"> <span class="items-name">账号：</span> <span class="iRadio male cur">
                                 <input id="jcLoginName" class="login-in" type="text" placeholder="QQ/手机" name="loginInfo" style=" line-height: 2em; padding: 2px 10px; font-size: 16px;">
                                 </span>
