--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -149,7 +149,7 @@ if ( domWidth<1200 ) {
                                 </div>
                             </div>
                             
-                            <div class="reg-items"> <a class="btnR1 jaBtnReg" href="javascript;">免费注册</a> </div>
+                            <div class="reg-items"> <a class="btnR1 jaBtnReg" href="javascript:;">免费注册</a> </div>
                         </div>
                     </section>
                 </form>
