--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -140,7 +140,7 @@ if ( domWidth<1200 ) {
                     <li></li>
                 </ol>
                 <!--注册框Begin-->
-                <form id="registerForm" action="" method="post">
+                <form id="registerForm" action="{:U('registerDoit')}" method="post">
                     <!--  隐藏域 -->
                     <input type="hidden" name="isReliveCardMember" value="-1">
                     <input id="doublemail" type="hidden" value="">
