--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -1,8 +1,3 @@
-<?php
-
-var_dump()
-
-?>
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -74,11 +69,12 @@ if ( domWidth<1200 ) {
 </script>
 <header id="jcZAHeader" class="header za-brand-header">
     <section class="frameW top-bar clearfix"> <a class="logo" href="#" title="相爱网"><img src="__IMG__/picture/logo.png" width="100%"/></a>
+ 
         <?php
-        if (empty($_SESSION['user']['username'])) {
-         
-       
 
+       // $_SESSION['user']['username']=empty($_SESSION['user']['username'])?$_COOKIE['user']:$_SESSION['user']['username'];
+        if (empty($_SESSION['user']['username'])) {
+            if (empty($_COOKIE['user'])) {   
         ?>
         <div id="jcLoginPanel" class="login-panel clearfix">
             <form id="loginForm" name="form1" action="{:U('login')}" method="post">
@@ -108,7 +104,17 @@ if ( domWidth<1200 ) {
             </form>
         </div>
     <?php
+             }else{
+                  $_SESSION['user']['username']=$_COOKIE['user'];
+                  ?>
+                  <div id="jcLoginPanel" class="login-panel clearfix">
+            <div align='right'>欢迎,  <?=$_SESSION['user']['username'];?> <a href="{:U('logout')}">退出</a></div>
+
+        </div>
+          <?php
+             }
         }else{
+            
         ?>
          <div id="jcLoginPanel" class="login-panel clearfix">
             <div align='right'>欢迎,  <?=$_SESSION['user']['username'];?> <a href="{:U('logout')}">退出</a></div>
@@ -140,7 +146,7 @@ if ( domWidth<1200 ) {
                     <li></li>
                 </ol>
                 <!--注册框Begin-->
-                <form id="registerForm" action="{:U('registerDoit')}" method="post">
+                <form id="registerForm" action="" method="post">
                     <!--  隐藏域 -->
                     <input type="hidden" name="isReliveCardMember" value="-1">
                     <input id="doublemail" type="hidden" value="">
